--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/iovis9/requiem-tree.git"
+    "url": "git+https://github.com/iovis/requiem-tree.git"
   },
   "keywords": [
     "require",
@@ -20,7 +20,7 @@
   "author": "David Marchante",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/iovis9/requiem-tree/issues"
+    "url": "https://github.com/iovis/requiem-tree/issues"
   },
-  "homepage": "https://github.com/iovis9/requiem-tree#readme"
+  "homepage": "https://github.com/iovis/requiem-tree#readme"
 }
